--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,6 @@ $font-family-Poppins: 'Poppins', sans-serif;
 $font-family-raleway: 'Raleway', sans-serif;
 $phone: 415px;
 $tablet: 600px;
-$phoneLandscape: 844px;
 $desktopSmall: 1000px;
 $desktopLarge: 1300px;
 
@@ -40,7 +39,10 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 5px;
-  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+  @media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
     width: 100%;
     background-size: cover;
     display: flex;
@@ -92,7 +94,10 @@ body {
             font-size: 24px;
             margin-left: 40px;
           }
-          @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+          @media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
             font-size: 30px;
             margin-left: 40px;
         }}
@@ -239,7 +244,10 @@ body {
   @media screen and (max-width: $phone) {
     justify-content: center;
   }
-  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+  @media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
     display: flex;
     justify-content: center;
 }
@@ -271,7 +279,10 @@ body {
       justify-content: center;
       align-items: center;
     }
-    @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    @media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
       margin-left: -50px;
     margin-top: -5px;}
   }
